# controller/inference.go
@@ -23,7 +23,7 @@ func AddRouterForInferenceController(
 ) {
 	ctl := InferenceController{
 		s: app.NewInferenceService(
-			p, repo, sender, int64(apiConfig.MinExpiryForInference),
+			p, repo, sender, apiConfig.MinSurvivalTimeOfInference,
 		),
 		project: project,
 	}
@@ -145,17 +145,7 @@ func (ctl *InferenceController) Create(ctx *gin.Context) {
 		return
 	}
 
-	if dto.Error != "" {
-		ws.WriteJSON(
-			newResponseCodeMsg(
-				errorSystemError, dto.Error,
-			),
-		)
-
-		return
-	}
-
-	if dto.AccessURL != "" {
+	if dto.Error != "" || dto.AccessURL != "" {
 		ws.WriteJSON(newResponseData(dto))
 
 		return
@@ -173,26 +163,12 @@ func (ctl *InferenceController) Create(ctx *gin.Context) {
 	for i := 0; i < apiConfig.InferenceTimeout; i++ {
 		dto, err = ctl.s.Get(&info)
 		if err != nil {
-			ws.WriteJSON(
-				newResponseCodeMsg(
-					errorSystemError, dto.Error,
-				),
-			)
+			ws.WriteJSON(newResponseError(err))
 
 			return
 		}
 
-		if dto.Error != "" {
-			ws.WriteJSON(
-				newResponseCodeMsg(
-					errorSystemError, dto.Error,
-				),
-			)
-
-			return
-		}
-
-		if dto.AccessURL != "" {
+		if dto.Error != "" || dto.AccessURL != "" {
 			ws.WriteJSON(newResponseData(dto))
 
 			return
